# reactivated-skeleton

./: .eslintrc.json  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.devcontainer/: devcontainer.json
backend/: settings.py  urls.py
client/: index.tsx
client/components/: Layout.tsx
client/templates/: TestPage.tsx
server/: asgi.py  settings.py  urls.py  wsgi.py
testapp/: templates.py  urls.py  views.py
testserver/: settings.py  urls.py
