[tool.poetry]
name = "reactivated-skeleton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reactivated_skeleton"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.0.1"
reactivated = "^0.30.2"
django-stubs = "1.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
